# glm-experiments

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  PROJECT.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bugfix.md  feature.md  refactoring.md
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  release-drafter.yml  test.yml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  step_progress_bar.yaml
configs/data/: default.yaml  gpn_animal_promoter.yaml  mnist.yaml  plants.yaml
configs/experiment/: accumulate_grad_batches.yaml  clm_transformer_base.yaml  clm_transformer_base_new_dataset.yaml  clm_transformer_base_new_dataset_v3.yaml  clm_transformer_base_new_dataset_vertebrates.yaml  clm_transformer_base_no_downweighting.yaml  clm_transformer_base_sliding_window.yaml  clm_transformer_base_sliding_window_constant.yaml  clm_transformer_large.yaml  clm_transformer_small.yaml  dlm_transformer_base.yaml  dlm_transformer_small.yaml  example.yaml  gpn_animal_promoter.yaml  gpn_debug.yaml  logging.yaml  mlm_transformer_base.yaml  mlm_transformer_small.yaml  plants_clm_transformer_base.yaml  plants_clm_transformer_base_no_downweighting.yaml  transformer_base.yaml  transformer_small.yaml
configs/logger/: wandb.yaml
configs/model/: bert_bytenet_small.yaml  bert_transformer_base.yaml  bert_transformer_small.yaml  clm_transformer_base.yaml  clm_transformer_large.yaml  clm_transformer_small.yaml  dlm_transformer_base.yaml  dlm_transformer_small.yaml  gpn_animal_promoter.yaml  mlm_transformer_base.yaml  mlm_transformer_small.yaml  mnist.yaml
configs/trainer/: ddp_sim.yaml  default.yaml  (+1 more)
glm_experiments/: eval.py  train.py
tests/: test_attention.py  test_attention_patterns.py  test_bert.py  test_bert_lit_module.py  test_bytenet.py  test_configs.py  test_datamodules.py  test_ddp_data_loading.py  test_dna_datamodule.py  test_eval.py  test_evals.py  test_lm.py  test_lm_lit_module.py  test_metrics.py  test_step_progress_bar.py  test_train.py  test_traitgym.py
(+38 files in other folders)
